the audio player works! still needs functionality and is currently hard-wired to play the first episode only

--- a/isfa/src/components/Player/Player.css
+++ b/isfa/src/components/Player/Player.css
@@ -23,3 +23,16 @@
     border-left: 3em solid #1d397b;
     border-bottom: 2em solid transparent;
 }
+
+.pause {
+    position: absolute;
+    top:1em;
+    left:1.5em;
+    margin:auto;
+    width: 3em;
+    height: 4em;
+
+    border-left: 1em solid #1d397b;
+
+    border-right: 1em solid #1d397b;
+}
