--- a/isfa/src/components/Caster/Caster.css
+++ b/isfa/src/components/Caster/Caster.css
@@ -1,9 +1,10 @@
 .profileCard {
     border: 1px solid black;
-    border-radius: 5%;
-    box-shadow:0px 10px 25px #284356;
+    /* border-radius: 5%; */
+    /* box-shadow:0px 10px 25px #284356; */
 }
 
 .name {
     margin:auto;
+    font-weight: bold;
 }
